Change history
--------------

Release Candidate 3
===================

- Added BrailJS Support, allowing to generate javascript via brail scripts.
 Note; BrailJS scripts do not need <?brail ?> and any output statements there will be ignored.
  They are used strictly to create the generator.

- Changed Brail extention from Boo to Brail / BrailJS

- Added mask support to FormHelper field elements

- Added FormHelper.PasswordNumberField

- Refactored FormHelper to support other approaches to extract values from instance.
  Now it supports DataRows, DataRowViews and reflection

- Added ColumnRenderer view component

- Added DiggStylePagination ViewComponent, based on Alex Henderson work. 
  See http://blog.bittercoder.com/PermaLink,guid,579711a8-0b16-481b-b52b-ebdfa1a7e225.aspx

- Added PaginationHelper.CreateCustomPage
  
  This is only useful if the application code takes care of slicing (select top and etc)

- Added formatting support to SetOperations (affects FormHelper.Select, Checkboxlist)
  
  Example:
  
  $Form.Select("price", [1..100], "%{textformat='C'}")
  
  This will render a select with options like
  
  <option value="1">$1.00</option>
  <option value="2">$2.00</option>
  <option value="3">$3.00</option>
  ...

- Added ScriptaculousHelper, deprecated Effects2Helper

- Extract Behaviour related operations from AjaxHelper into BehaviourHelper

- Added BehaviourHelper

- Added UpdatePage and UpdatePageTag ViewComponents. Both allow you to have a "page"
  which is a JS generator. It evaluates the view component body to generate the JS.
  
  Example:
  
#blockcomponent(UpdatePageTag)
$page.el('products').style.bgcolor.set('"white"')
#end


#blockcomponent(UpdatePage)
$page.el('products').style.bgcolor.set('"white"')
#end

- Added FormHelper.NumberField() which renders a 'input text' with a javascript that
  prevents chars other than numbers (and period) from being entered.

	You can optionally pass an <c>exceptions</c> value through the dictionary.